@@ -3,6 +3,8 @@
     * Changed default log and file size limitations from 2 GiB (2*1024**3) to 2 GB (2e9).
       Updated the corresponding error messages to correctly reference sizes in GB instead of GiB.
     * Clarified that the `filter` option only applies to model variables.
+    * Fixed a bug introduced in PyFMI 2.15 where the diagnostics trajectory for CPU time was
+      returned as CPU time per step instead of cumulative CPU time.
 
 --- PyFMI-2.16.2 ---
     * Increased robustness of getting the `supports` attribute from ResultHandlers.
